--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
  <head>
     <title>Static</title>
+    <link rel="icon" type="image/x-icon" href="https://github.com/iloveNlGGERS/Static/blob/main/cough.png">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta content="English or spanish?" name="description">
     <meta content="website" property="og:type">
@@ -28,43 +29,9 @@
             let interval;
 
             video.oncanplaythrough = async () => {
-                p("Ava info:")
-                p("Name", "Ava Sullivan")
-                p("Gender", "Female")
-                p('Race', "White")
-                p('Age', "13 (3 February 2011)")
-                p('Facebook', "facebook.com/ava.852886")
-                p('YouTube', "youtube.com/@Avaeevee735")
-                p('Roblox', "roblox.com/users/1995405071/profile")
-                p('School', "Parkway Northeast Middle School ")
-
-                p("Dads name", "Shane Gegg")
-                p("Gender", "Male (Looks like a snowflake)")
-                p('Race', "White (Western European)")
-                p('Age', "36 (19 February 1988)")
-                p('Addy', "1358 Craig Rd, Saint Louis, MO 63146")
-                p('Number', "+1 573-883-2978")
-                p('Children', "1")
-                p("Facebook", "facebook.com/shane.gegg")
-                p("Relgion", "Protestant")
-                p("Relationship Status", "Married Hannah Gegg")
-            
-                p("Moms name", "Hannah Sullivan Gegg")
-                p("Gender", "Female")
-                p('Race', "White (Western European)")
-                p('Age', "33 (July 1991)")
-                p('Addy', "1358 Craig Rd, Saint Louis, MO 63146")
-                p('Number', "+1 573-883-2978")
-                p('Children', "1")
-                p("Facebook", "facebook.com/hannah.sullivan.3939")
-                p("Relgion", "Protestant")
-                p("Relationship Status", "Married Shane Gegg")
-
-                p("IP Info", "check-host.net/ip-info?host=24.107.23.125 Static!")
-                p('ISP', "CHARTER-20115")
-
-                p('Killer mode', "Shane GEG : You've been IP Logged probably... right?")
-
+                
+                p("Will you ever learn....?")
+                p("English or spanish isnt dead...")
                 loading.style.display = 'none';
                 start.style.display = 'flex';
                 preload.style.cursor = 'pointer';
@@ -86,7 +53,7 @@
                     const time = video.currentTime - 13.166 - step * 0.500;
                     // const time = video.currentTime - 0 - step * 0.100;
                     if (time > 0) {
-                        if (step == 0) document.title = 'Darkweb hacka real...';
+                        if (step == 0) document.title = 'Static';
                         const el = document.createElement('span');
                         el.textContent = memes[step];
                         data.appendChild(el);
@@ -101,7 +68,7 @@
                 }, 10);
             }
 
-            const response = await fetch('jammin.mp4').catch(e);
+            const response = await fetch('boys.mp4').catch(e);
             const reader = response.body.getReader();
             const contentLength = +response.headers.get('Content-Length');
             let receivedLength = 0;
