--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html>
  <head>
     <title>Static</title>
-    <link rel="icon" type="image/x-icon" href="https://github.com/iloveNlGGERS/Static/blob/main/cough.png">
+    <link rel="icon" type="image/x-icon" href="\cough.png">
+ 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta content="English or spanish?" name="description">
     <meta content="website" property="og:type">
@@ -50,7 +51,7 @@
                 let fontSize = Math.min(window.innerHeight / 10, window.innerWidth / 20);
                 data.style.fontSize = fontSize + 'px';
                 interval = setInterval(() => {
-                    const time = video.currentTime - 13.166 - step * 0.500;
+                    const time = video.currentTime - 0.50 - step * 0.500;
                     // const time = video.currentTime - 0 - step * 0.100;
                     if (time > 0) {
                         if (step == 0) document.title = 'Static';
