--- a/index.html
+++ b/index.html
@@ -31,8 +31,10 @@
 
             video.oncanplaythrough = async () => {
                 
-                p("Will you ever learn....?")
-                p("English or spanish isnt dead...")
+                p("Will you ever learn","....?")
+                p("English or spanish"," isnt dead...")
+                p("Did you get your IP Logged","..maybe")
+                p("Wedontknow","true")
                 loading.style.display = 'none';
                 start.style.display = 'flex';
                 preload.style.cursor = 'pointer';
