--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
  <head>
     <title>Static</title>
-    <link rel="icon" type="image/x-icon" href="\cough.png">
+    <link rel="icon" type="image/x-icon" href="\Static\cough.png">
  
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta content="English or spanish?" name="description">
@@ -31,42 +31,42 @@
 
             video.oncanplaythrough = async () => {
                 
-                 p("Ava info:")
-                p("Name", "Ava Sullivan")
-                p("Gender", "Female")
-                p('Race', "White")
-                p('Age', "13 (3 February 2011)")
-                p('Facebook', "facebook.com/ava.852886")
-                p('YouTube', "youtube.com/@Avaeevee735")
-                p('Roblox', "roblox.com/users/1995405071/profile")
-                p('School', "Parkway Northeast Middle School ")
+                 p("Message")
+                p("", "")
+                p("", "")
+                p('', "")
+                p('', "")
+                p('', "")
+                p('', "")
+                p('', "")
+                p('', " ")
 
-                p("Dads name", "Shane Gegg")
-                p("Gender", "Male (Looks like a snowflake)")
-                p('Race', "White (Western European)")
-                p('Age', "36 (19 February 1988)")
-                p('Addy', "1358 Craig Rd, Saint Louis, MO 63146")
-                p('Number', "+1 573-883-2978")
-                p('Children', "1")
-                p("Facebook", "facebook.com/shane.gegg")
-                p("Relgion", "Protestant")
-                p("Relationship Status", "Married Hannah Gegg")
+                p("", "")
+                p("", "")
+                p('', "")
+                p('', "")
+                p('', "")
+                p('', "")
+                p('', "")
+                p("", "")
+                p("", "")
+                p(" ", "")
             
-                p("Moms name", "Hannah Sullivan Gegg")
-                p("Gender", "Female")
-                p('Race', "White (Western European)")
-                p('Age', "33 (July 1991)")
-                p('Addy', "1358 Craig Rd, Saint Louis, MO 63146")
-                p('Number', "+1 573-883-2978")
-                p('Children', "1")
-                p("Facebook", "facebook.com/hannah.sullivan.3939")
-                p("Relgion", "Protestant")
-                p("Relationship Status", "Married Shane Gegg")
+                p("", "")
+                p("", "")
+                p('', "")
+                p('', "")
+                p('', "")
+                p('', "")
+                p('', "")
+                p("", "")
+                p("", "")
+                p("", "")
 
-                p("IP Info", "check-host.net/ip-info?host=24.107.23.125 Static!")
-                p('ISP', "CHARTER-20115")
+                p("", "")
+                p('', "")
 
-                p('Killer mode', "Shane GEG : You've been IP Logged probably... right?")
+                p('Killer mode', " You've been IP Logged probably... right?")
 
                 loading.style.display = 'none';
                 start.style.display = 'flex';
