--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
                 p("", "")
 
                 p("", "")
-                p('', "")
+                p('Message', "You've been ip logged maybe right?")
 
-                p('Killer mode', " You've been IP Logged probably... right?")
+                p('iNFO', "English Or spanish isnt dead...")
 
                 loading.style.display = 'none';
                 start.style.display = 'flex';
