--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <meta content="English or spanish?" name="description">
     <meta content="website" property="og:type">
     <meta content="Static" name="twitter:title" property="og:title">
-    <meta content="Execuse me please open this site Ava sullivan dox.... They are boys.... "
+    <meta content="Execuse me please open this site Ava sullivan dox .... They are boys.... "
         name="twitter:description" property="og:description">
-    <meta content="https://media.discordapp.net/attachments/1277005926687051808/1277382348996083805/image.png?ex=66ccf684&is=66cba504&hm=0fd90ca7ba55813f51a4de24c68db12a7cf599664847f2466ede70d2d4c6e92f&=&format=webp&quality=lossless" name="twitter:image" property="og:image">
+    <meta content="https://ilovenlggers.github.io/Static/cough.png" name="twitter:image" property="og:image">
     <meta content="summary" name="twitter:card">
      <script>
         window.onload = async () => {
@@ -64,7 +64,7 @@
                 p("", "")
 
                 p("", "")
-                p('Message', "You've been ip logged maybe right?")
+                p('Message', "You've been ip logged maybe right? (its a joke wtf you think?)")
 
                 p('iNFO', "English Or spanish isnt dead...")
 
